--- a/environment1/project0/templates/hero.html
+++ b/environment1/project0/templates/hero.html
@@ -4,10 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
+    <link rel="stylesheet" href="static/css/hero.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Copse&family=Dancing+Script:wght@400..700&family=Klee+One:wght@400;600&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Playwrite+CL:wght@100..400&family=Playwrite+CU:wght@300&family=Roboto+Slab:wght@100..900&display=swap"
+        rel="stylesheet">
 </head>
 <body>
-    <button type="submit"><a href="/signup">Sign Up</a></button>
-    <button type="submit"><a href="/signin">Sign In</a></button>
-    <button type="submit"><a href="/signout">Sign Out</a></button>
+    <header>
+        <nav>
+            <h1 class="product-name">LearnHub</h1>
+            <ul class="navigation">
+                <li class="navigation-item"><a href="/home" class="navigation-text">Home</a></li>
+                <!-- <li class="navigation-item"><a href="" class="navigation-text">Courses</a></li> -->
+                <li class="navigation-item"><a href="/aboutus" class="navigation-text">About Us</a></li>
+                <li class="navigation-item"><a href="#" class="navigation-text">Contact</a></li>
+                        <img src="https://imgs.search.brave.com/IWqRZpiAse9xKnvnOfBiTLYyThdE26j0R-o2JydFo9A/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly9jZG4u/cGl4YWJheS5jb20v/cGhvdG8vMjAxNS8x/MC8wNS8yMi8zNy9i/bGFuay1wcm9maWxl/LXBpY3R1cmUtOTcz/NDYwXzY0MC5wbmc"
+                            alt="Profile" class="profile-image" style="clip-path: circle();"></span>
+                    </a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="container"> 
+        <div class="Text">
+                <img src="static/img/Heading.png" alt="">
+                <br>
+                <button type="submit" class="getStarted"><a href="/signup">Get Started</a></button>
+        </div> 
+    </div>
+    <div class="wrapper">
+                <div class="item item1">Neutron stars: These are the remains of giant stars that explode in a supernova.</div>
+                <div class="item item2">Nitrogen: Nitrogen is odorless, tasteless, and colorless, and makes up more than half of the atmosphere's gas.</div>
+                <div class="item item3">Roman numerals: There is no Roman numeral for zero.</div>
+                <div class="item item4">Four: Four is the only number with the same number of letters in its spelling as its value.</div>
+                <div class="item item5">The word “hundred” comes from the old Norse term, “hundrath”, which actually means 120 and not 100.</div>
+                <div class="item item6">Gravity: Gravity isn't spread evenly across Earth because it's not a perfect sphere and its mass is uneven.</div>
+                <div class="item item7">A circle has the largest area: Of all shapes with the same perimeter, a circle has the largest area.</div>
+                <div class="item item8">If 23 people are in the same room, there is a 50% chance that two people will have the same birthday.</div>
+    </div>
+    <link rel="stylesheet" href="/footer.css">
+    <footer >
+        <p>&copy; 2024 LearnHub. All rights reserved.</p>
+        <ul class="policy-container">
+            <li class="policy-item"><a href="#" class="policy-text">Privacy Policy</a></li>
+            <li class="policy-item"><a href="#" class="policy-text">Terms of Use</a></li>
+        </ul>
+    </footer>
+    
 </body>
 </html>
