--- a/environment1/project0/templates/auth/signin.html
+++ b/environment1/project0/templates/auth/signin.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
+    <link rel="stylesheet" href="/static/css/auth.css">
 </head>
 <body>
-    <h3>Sign In</h3>
-    <form action="" method="post">
-        {% csrf_token %}
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" placeholder="Enter your username"><br><br>
-        <label for="pass1">Password:</label>
-        <input type="password" id="pass1" name="pass1" placeholder="Enter your password"><br><br>
-        <button type="submit">Sign up</button>
-    </form>
+    <img class="hero-img" src="static\img\background.jpg" alt="">
+    <div class="form-container">
+        <h3>Sign In</h3>
+        <form action="" method="post">
+            {% csrf_token %}
+            <label for="username">Username:</label>
+            <input type="text" class="form-input" id="username" name="username" placeholder="Enter your username"><br><br>
+            <label for="pass1">Password:</label>
+            <input type="password" class="form-input" id="pass1" name="pass1" placeholder="Enter your password"><br><br>
+            <button type="submit" class="form-submit">Sign In</button>
+        </form>
+    </div>
 </body>
 </html>
